2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_element_msg_sync):
	Avoid a race with xoverlay interface discovery. Because the
	update_interface implementations function only searches for interfaces
	from the main gui thread, there's a race when the sync_msg comes in
	requesting an xid to embed and the xoverlay interface isn't available
	until the gui thread updates it.

	Avoid the race by using the sender of the message when it (as it
	always should) implements the GstXOverlay interface.

============ Version 2.26.2

2009-05-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.2

2009-05-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Add support for autohref,
	makes trailers on the Apple website work again
	(Closes: #580973)

2009-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_add_subtitle):
	Add the cache subtitles directory to the subtitle file
	selection dialogue's shortcuts (Closes: #579860)

2009-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/opensubtitles/opensubtitles.py:
	Fix failure to save downloaded subtitles, see
	https://bugzilla.redhat.com/show_bug.cgi?id=497210

2009-04-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (resolve_uri):
	Fix resolve_uri returning an empty URI when trying to resolve
	with a base at the root of a webserver (Closes: #579716)

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod:
	* data/totem.1: Update from master

2009-04-08  Christian Persch  <chpe@gnome.org>

	* src/eggsmclient-xsmp.c: (save_state): Re-sync from libegg master.

============ Version 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.1

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):